<resources>
    <string name="app_name">Mobile Camera</string>

    <string name="hello_world">Welcome to use Mobile Camera!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_register">register</string>
    <string name="login_login">login</string>
    <string name="register_submit">submit</string>
    <string name="register_username">username</string>
    <string name="register_password">password</string>
    <string name="register_back">back</string>
    <string name="register_title">Register</string>
    <string name="register_password_not_same">two password not the same</string>
    <string name="btn_start_recording">start recording</string>
    <string name="btn_stop_recording">stop recording</string>
    <string name="main_history">History</string>
    <string name="btn_new_recording">new recording</string>
</resources>
