<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        android:id="@+id/button"
        android:onClick="Btn1OnClick"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:id="@+id/button2"
        android:onClick="Btn2OnClick"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_password"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textView"
        android:layout_marginTop="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_world"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_marginTop="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="textPersonName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:hint="@string/login_username"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/textView2"
        android:layout_alignBaseline="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editText2"
        android:layout_toEndOf="@+id/textView3"
        android:password="true"
        android:autoText="false"
        android:editable="true"
        android:linksClickable="false"
        android:layout_alignParentEnd="true"
        android:hint="@string/register_password"
        android:layout_alignBaseline="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
