<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_username"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_password"
        android:id="@+id/textView5"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_password"
        android:id="@+id/textView6"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/editText3"
        android:layout_alignParentEnd="true"
        android:hint="@string/register_username"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_toRightOf="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editText4"
        android:layout_alignParentEnd="true"
        android:hint="@string/register_password"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignBaseline="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editText5"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:hint="@string/register_password"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_toRightOf="@+id/textView6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_submit"
        android:id="@+id/button3"
        android:onClick="Btn3OnClick"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_back"
        android:id="@+id/button4"
        android:onClick="Btn4OnClick"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView7"
        android:gravity="center"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_title"
        android:id="@+id/textView8"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>